[package]
name = "railmap"
version = "0.1.7"
authors = ["Martin Hoffmann <hn@nvnc.de>"]
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.17", features = ["png", "svg", "v1_16"] }
clap = { version = "4.3.19", features = ["cargo"] }
#femtomap = { git = "https://github.com/partim/femtomap.git", features = [ "serde" ] }
femtomap = { path = "../../femtomap/new-import", features = [ "serde" ] }
hyper = { version = "0.14.26", features = ["server", "http1", "http2", "tcp"] }
ignore = "0.4.14"
kurbo = "0.9.0"
lazy_static = "1.4"
lru = "0.11.0"
nom = "7"
nom_locate = "4"
osmxml = { git = "https://github.com/partim/osmxml.git" }
rstar = "0.11"
serde = { version = "1", features = ["derive"] }
smallvec = { version = "1.8", features = [ "const_generics" ] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
toml = "0.7.2"

[[bin]]
name = "railmap"
doc = false

[profile.release]
panic = "abort"

[package.metadata.deb]
maintainer-scripts = "pkg/debian"
section = "web"
assets = [
    ["target/release/railmap", "usr/sbin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]
systemd-units = { unit-name = "railmap", enable = true }

