[package]
name = "railmap"
version = "0.1.20"
authors = ["Martin Hoffmann <hn@nvnc.de>"]
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7.1"
cairo-rs = { version = "0.21", features = ["png", "svg", "v1_16"] }
clap = { version = "4.3.19", features = ["cargo", "derive"] }
femtomap = { git = "https://github.com/partim/femtomap.git", features = [ "serde" ] }
http-body-util = "0.1"
hyper = { version = "1.2", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
kurbo = "0.11"
lazy_static = "1.4"
lru = "0.16"
notify = "7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.27", features = ["macros", "net", "rt-multi-thread"] }
toml = "0.9"

[[bin]]
name = "railmap"
doc = false

[profile.release]
panic = "abort"

[package.metadata.deb]
maintainer-scripts = "pkg/debian"
section = "web"
assets = [
    ["target/release/railmap", "usr/sbin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]
systemd-units = { unit-name = "railmap", enable = true }

